# nodum

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: config.rs  main.rs
backend/src/api/: mod.rs
backend/src/db/: mod.rs  models.rs
backend/src/graph/: mod.rs
backend/src/llm/: claude.rs  gemini.rs  mod.rs  openai.rs  provider.rs
backend/src/reader/: mod.rs
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/Graph/: ForceGraph.tsx  GraphFullView.tsx  MiniGraph.tsx
frontend/src/components/Layout/: AppLayout.tsx  Library.tsx  LoginPage.tsx
frontend/src/components/Reader/: ReaderView.tsx
frontend/src/components/Settings/: SettingsView.tsx
frontend/src/components/ThinkingDock/: ThinkingDock.tsx
frontend/src/stores/: index.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
