[package]
name = "nodum"
version = "0.1.0"
edition = "2021"
description = "Nodum — The Knowledge-Connecting Book Reader"
license = "MIT"
repository = "https://github.com/nodum-app/nodum"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# LLM clients
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# PDF parsing
lopdf = "0.32"
pdf-extract = "0.7"

# EPUB parsing
epub = "2"

# Embeddings & vector math
ndarray = "0.15"

# Auth & security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
dotenvy = "0.15"
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Misc
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
mime_guess = "2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
